# evm_labs

lab3/: O0.s  O1.s  O2.s  m32.s  main.c
lab4/: O0.s  O1.s
lab5/: CMakeLists.txt  main.cpp
lab6/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt  main.cpp
